# docs/swagger.json
@@ -1,4 +1,8 @@
 {
+    "schemes": [
+        "http",
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "This is a sample server for My Manajer API.",
@@ -84,6 +88,11 @@
         },
         "/businesses": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieves a list of all businesses.",
                 "produces": [
                     "application/json"
@@ -123,6 +132,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Creates a new business with the provided details.",
                 "consumes": [
                     "application/json"
@@ -181,6 +195,11 @@
         },
         "/businesses/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieves a single business by its ID.",
                 "produces": [
                     "application/json"
@@ -232,6 +251,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Updates an existing business with the provided details.",
                 "consumes": [
                     "application/json"
@@ -301,6 +325,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Deletes a business by its ID.",
                 "produces": [
                     "application/json"
@@ -342,6 +371,11 @@
         },
         "/channel-categories": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieves a list of all channel categories.",
                 "produces": [
                     "application/json"
@@ -381,6 +415,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Creates a new channel category with the provided details.",
                 "consumes": [
                     "application/json"
@@ -439,6 +478,11 @@
         },
         "/channel-categories/business/{businessId}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieves a list of all channel categories for a specific business.",
                 "produces": [
                     "application/json"
@@ -495,6 +539,11 @@
         },
         "/channel-categories/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieves a single channel category by its ID.",
                 "produces": [
                     "application/json"
@@ -552,6 +601,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Updates an existing channel category with the provided details.",
                 "consumes": [
                     "application/json"
@@ -621,6 +675,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Deletes a channel category by its ID.",
                 "produces": [
                     "application/json"
@@ -668,6 +727,11 @@
         },
         "/channels": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieves a list of all channels.",
                 "produces": [
                     "application/json"
@@ -707,6 +771,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Creates a new channel with the provided details.",
                 "consumes": [
                     "application/json"
@@ -765,6 +834,11 @@
         },
         "/channels/business/{businessId}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieves a list of all channels for a specific business.",
                 "produces": [
                     "application/json"
@@ -821,6 +895,11 @@
         },
         "/channels/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieves a single channel by its ID.",
                 "produces": [
                     "application/json"
@@ -878,6 +957,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Updates an existing channel with the provided details.",
                 "consumes": [
                     "application/json"
@@ -947,6 +1031,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Deletes a channel by its ID.",
                 "produces": [
                     "application/json"
@@ -2091,6 +2180,11 @@
         },
         "/roles": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get a list of all roles.",
                 "produces": [
                     "application/json"
@@ -2130,6 +2224,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create a new role with specified name, business ID, and permissions.",
                 "consumes": [
                     "application/json"
@@ -2188,6 +2287,11 @@
         },
         "/roles/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get role details by its unique ID.",
                 "produces": [
                     "application/json"
@@ -2245,6 +2349,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Update an existing role's name and permissions by ID.",
                 "consumes": [
                     "application/json"
@@ -2302,6 +2411,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Delete a role by its unique ID.",
                 "produces": [
                     "application/json"
